Refactored Parser.java, updated syntax style.